Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10911 FLR2: Read only erasure coding
  3. LU-19527

FLR-EC: Never select EC mirror as primary for write or allow setting PREFER flags

XMLWordPrintable

    • 3
    • 9223372036854775807

      A parity mirror should never be selected by the as primary for writes by the metadata server, since it is not a valid destination for normal data writes.  For a mirror which is partially parity and partially data mirrors, this still applies, because it is paired with a data only mirror and that's where the writes should be sent.

      We should also not allow setting read or write prefer flags on a parity containing component, since it's not a valid source by itself.  We CAN allow setting the read prefer flag on a data component in a parity containing mirror.

            paf0186 Patrick Farrell
            paf0186 Patrick Farrell
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: