LU-19527 lfs: fix resync with nosync+stale components

When 'lfs mirror resync' is called on a file with nosync+stale
components, llapi_mirror_find_stale() correctly skips them
since they cannot be resynced. However, lfs_mirror_verify_file()
then sees inconsistent mirrors with no resyncable stale
components and returns an error.

Fix this by updating the verify logic to handle nosync components:
1. In print_stale_mirrors(): print "(nosync,stale)" to inform
   users, but don't count them as errors
2. In lfs_mirror_prepare_chunk(): skip nosync components when
   building chunks for verification

This makes resync succeed as a no-op when all stale components
have nosync set, matching the expected behavior.

Add test_7 in sanity-ec.sh to verify that parity mirrors with
nosync remain stale after resync and their data is preserved
until nosync is cleared.

Test-Parameters: testlist=sanity-ec
Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Change-Id: I12a0d30b1e50427e6bec041900702634180345bd
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62483
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>